manifest/counter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter
  labels:
    io.kompose.service: counter
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: counter
  template:
    metadata:
      labels:
        io.kompose.service: counter
    spec:
      containers:
        - name: counter
          image: cuongopswat/go-coffeeshop-counter
          ports:
            - containerPort: 5002
      restartPolicy: Always
