manifest/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: product
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: product
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: product
    spec:
      containers:
        - env:
            - name: APP_NAME
              value: product-service in docker
          image: cuongopswat/go-coffeeshop-product
          name: product
          ports:
            - containerPort: 5001
              protocol: TCP
      restartPolicy: Always
