manifest/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: web
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: web-config
            - secretRef:
                name: postgres-db-creds

          image: cuongopswat/go-coffeeshop-web
          name: web
          ports:
            - containerPort: 8888
              protocol: TCP
      restartPolicy: Always
