manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: <ALB-DNS>  # Ví dụ: a1b2c3d4e5f6g7.us-east-2.elb.amazonaws.com
      http:
        paths:
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8888
          - path: /proxy
            pathType: Prefix
            backend:
              service:
                name: proxy
                port:
                  number: 5000
